Partially implement Field element functionality, introduce autoloading

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+  "autoload": {
+    "psr-4": {
+      "Eno\\": "src/elements/"
+    }
+  },
   "name": "eno-lang/enophp",
   "description": "PHP implementation of the eno library specification",
   "require-dev": {
