--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "autoload": {
     "psr-4": {
       "Eno\\": ["src/elements/", "src/errors/"],
+      "Eno\\Matchers\\": "spec/matchers",
       "Eno\\Reporters\\": "src/reporters"
     }
   },
