Add PSR-4 namespacing

--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "Eno\\": ["src", "src/elements/", "src/errors/"],
-      "Eno\\Errors\\": "src/errors",
-      "Eno\\Reporters\\": "src/reporters"
+      "Eno\\": "src"
     }
   },
   "autoload-dev": {
